Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "The following graphic shows the breakdown of the 'Machine Learning' branch of AI:\n",
     "\n",
-    "<img src='images/new_ml-hierarchy.png' width=\"600\">\n",
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/new_ml-hierarchy.png' width=\"600\">\n",
     "\n",
     "\n",
     "## Machine Learning\n",
